updated video and fixed alignment of play icon

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,4 +1,4 @@
-.about{
+.about {
     margin: 100px auto;
     display: flex;
     align-items: center;
@@ -6,53 +6,72 @@
     width: 90%;
 }
 
-.about-left{
+.about-left {
     flex-basis: 40%;
     position: relative;
 }
 
-.about-right{
+.about-right {
     flex-basis: 55%;
 }
 
-.about-img{
+.about-img {
     width: 100%;
     max-width: 100%;
     border-radius: 10px;
+    display: block;
+    position: relative;
 }
-.play-icon{
+
+.play-icon {
     width: 60px;
+    height: 60px;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(50%, -50%);
+    transform: translate(-50%, -50%);
+    cursor: pointer;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: white;
+    font-size: 24px; /* Adjust icon size */
 }
-.about h3{
+
+.play-icon:hover {
+    background: rgba(0, 0, 0, 0.8);
+}
+
+.about h3 {
     font-weight: 600;
-    font-weight: 16px;
+    font-size: 16px;
     color: #212EA0;
 }
-.about h2{
+
+.about h2 {
     font-size: 35px;
     color: #000F38;
     margin: 10px 0;
     max-width: 400px;
 }
-.about p{
+
+.about p {
     color: #676767;
     margin-bottom: 15px;
 }
 
-@media (max-width: 800px){
-    .about{
+@media (max-width: 800px) {
+    .about {
         flex-direction: column;
     }
-    .about-left{
+    .about-left {
         flex-basis: 100%;
         margin: 20px;
         order: 2;
     }
-    .about-right{
+    .about-right {
         flex-basis: 100%;
     }
 }
