--- a/src/Components/VideoPlayer/VideoPlayer.css
+++ b/src/Components/VideoPlayer/VideoPlayer.css
@@ -1,4 +1,4 @@
-.video-palyer{
+.video-player{
     position: fixed;
     top: 0;
     left: 0;
@@ -10,13 +10,12 @@
     align-items: center;
     justify-content: center;
 }
-
-.video-palyer video{
+.video-player video{
     width: 90%;
     max-width: 900px;
     height: auto;
     border: 4px solid #fff;
 }
-.video-palyer hide{
+.video-player.hide{
     display: none;
 }
